# TFM_EnriqueBauza

DPCpp_SingleScattering/: CMakeLists.txt  comp_inst.txt  main.cpp  notes.md
DPCpp_SingleScattering/BitString_Tree_Representation/: tree_rep.cpp  tree_rep.hpp
DPCpp_SingleScattering/build-release/: CMakeCache.txt  Het_Imp  Makefile  cmake_install.cmake
DPCpp_SingleScattering/build-release/results_005/: best_inds.txt  conv_stats.txt  plots_scat.py  pop.txt  time_stats.txt
DPCpp_SingleScattering/rand_funcs/: rand_funcs.cpp  rand_funcs.hpp
Python_Implementation/: Integration_error.py  Tree_expressions.py  Tree_expressions_multivariate_4.py  Tree_expressions_multivariate_4var.py  Tree_expressions_multivariate_outlier_detection.py  Tree_expressions_multivariate_sets.py  Tree_expressions_v2.py  Tree_expressions_v3(Pow).py  Tree_expressions_v4(exp).py  code_v1.py  code_v2.py  code_v3.py  conv_file.txt  pruebas.py  test1.gv  time_file.txt
